--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,23 @@
   src: url(Corbel.ttf);
 }
 
+@font-face {
+  font-family: 'Droid Serif';
+  src: url(DroidSerif.ttf)
+}
+
 body {
   margin: 0;
-  font-family: Corbel,-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+  font-family: 'Droid Serif',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+p {
+  font-family: Corbel, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 
 code {
