--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ body {
 h1,h2,h3 {
   font-weight: 550;
 }
-p {
+p, li {
   font-family: Corbel, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
