--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,9 @@ body {
 }
 h1,h2,h3 {
   font-weight: 550;
+  font-family: 'Droid Serif', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
 }
 p, li {
   font-family: Corbel, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
