--- a/src/index.css
+++ b/src/index.css
@@ -7,14 +7,18 @@
   font-family: 'Droid Serif';
   src: url(DroidSerif.ttf)
 }
-
+html, body { 
+  height: auto 
+ }
 body {
+  overflow-anchor: none;
   margin: 0;
   font-family: 'Droid Serif',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 h1,h2,h3 {
   font-weight: 550;
@@ -26,9 +30,4 @@ p, li {
   font-family: Corbel, -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
 }
