--- a/src/index.css
+++ b/src/index.css
@@ -8,10 +8,12 @@
   src: url(DroidSerif.ttf)
 }
 html, body { 
-  height: auto 
+  height: auto ;
+
+
  }
 body {
-  overflow-anchor: none;
+
   margin: 0;
   font-family: 'Droid Serif',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
