--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,7 @@ html, body {
 
  }
 body {
-
+  overflow-anchor: none;
   margin: 0;
   font-family: 'Droid Serif',-apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
