--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,74 @@
   height: auto;
   min-height: 100vh;
 }
+
+.cookie-button {
+  padding: 10px 10px;
+  background: rgb(81,147,43);
+  background: linear-gradient(43deg, rgba(81,147,43,0.7) 0%, rgba(156,175,4,0.7) 100%);
+  color: white;
+  margin: 0 20px;
+  width: 150px;
+  font-size: 16px;
+  cursor: pointer;
+  border: 0;
+  border-radius: 5px;
+  font-weight: 600;
+  transition: all ease-in-out .5s;
+
+}
+.cookie-button:hover {
+  background: linear-gradient(43deg, rgba(81,147,43,1) 0%, rgba(156,175,4,1) 100%);
+}
+.decline-button:hover {
+  background: linear-gradient(43deg, rgba(147,47,43,1) 0%, rgba(255,61,86,1) 100%);
+}
+
+.decline-button {
+  padding: 10px 0px;
+  background: rgb(147,47,43);
+  background: linear-gradient(43deg, rgba(147,47,43,0.7) 0%, rgba(255,61,86,0.7) 100%);
+  color: white;
+  margin: 0 10px;
+  width: 150px;
+  border: 0;
+  border-radius: 5px;
+  font-weight: 600;
+  cursor: pointer;
+
+}
+
+.cookie-container {
+  position: fixed;
+  bottom: 0px !important;
+  left: 0;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 5%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgba(30, 61, 120, 0.8);
+  z-index: 9999;
+  color: white;
+  text-align: left;
+}
+@media screen and (max-width: 800px){
+  .cookie-container {
+    flex-flow: column wrap;
+    font-size: 12px;
+  }
+  .cookie-button {
+    margin: 5px 0;
+    padding: 5px 15px;
+    font-size: 12px;
+    width: auto;
+  }
+  .decline-button {
+    padding: 2px 0;
+    padding: 5px 15px;
+    font-size: 10px;
+    width: auto;
+  }
+  
+}
