--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,16 @@
   background: linear-gradient(43deg, rgba(81,147,43,1) 0%, rgba(156,175,4,1) 100%);
 }
 .decline-button:hover {
-  background: linear-gradient(43deg, rgba(147,47,43,1) 0%, rgba(255,61,86,1) 100%);
+  /* background: linear-gradient(43deg, rgba(147,47,43,1) 0%, rgba(255,61,86,1) 100%); */
+  background: rgba(255,255,255,1);
 }
 
 .decline-button {
   padding: 10px 0px;
-  background: rgb(147,47,43);
-  background: linear-gradient(43deg, rgba(147,47,43,0.7) 0%, rgba(255,61,86,0.7) 100%);
-  color: white;
+  /* background: rgb(147,47,43);
+  background: linear-gradient(43deg, rgba(147,47,43,0.7) 0%, rgba(255,61,86,0.7) 100%); */
+  background: rgba(255,255,255,0.7);
+  color: black;
   margin: 0 10px;
   width: 150px;
   border: 0;
